[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/enemy/Warrior Skeleton/Walking/Separate Sp/walk (2).png" type="Texture" id=1]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Walking/Separate Sp/walk (3).png" type="Texture" id=2]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Walking/Separate Sp/walk (1).png" type="Texture" id=3]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Walking/Separate Sp/walk (10).png" type="Texture" id=4]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Walking/Separate Sp/walk (6).png" type="Texture" id=5]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Walking/Separate Sp/walk (8).png" type="Texture" id=6]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Walking/Separate Sp/walk (4).png" type="Texture" id=7]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Walking/Separate Sp/walk (7).png" type="Texture" id=8]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Walking/Separate Sp/walk (5).png" type="Texture" id=9]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Walking/Separate Sp/walk (9).png" type="Texture" id=10]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Attack 1/Separate Sp/attack (6).png" type="Texture" id=11]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Attack 1/Separate Sp/attack (1).png" type="Texture" id=12]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Attack 1/Separate Sp/attack (2).png" type="Texture" id=13]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Attack 1/Separate Sp/attack (5).png" type="Texture" id=14]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Attack 1/Separate Sp/attack (3).png" type="Texture" id=15]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Attack 1/Separate Sp/attack (7).png" type="Texture" id=16]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Attack 1/Separate Sp/attack (10).png" type="Texture" id=17]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Attack 1/Separate Sp/attack (4).png" type="Texture" id=18]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Attack 1/Separate Sp/attack (8).png" type="Texture" id=19]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Attack 1/Separate Sp/attack (9).png" type="Texture" id=20]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Dead/Separate Sp/dead (4).png" type="Texture" id=21]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Dead/Separate Sp/dead (5).png" type="Texture" id=22]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Dead/Separate Sp/dead (7).png" type="Texture" id=23]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Dead/Separate Sp/dead (8).png" type="Texture" id=24]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Dead/Separate Sp/dead (3).png" type="Texture" id=25]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Dead/Separate Sp/dead (9).png" type="Texture" id=26]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Dead/Separate Sp/dead (6).png" type="Texture" id=27]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Dead/Separate Sp/dead (1).png" type="Texture" id=28]
[ext_resource path="res://assets/enemy/Warrior Skeleton/Dead/Separate Sp/dead (2).png" type="Texture" id=29]
[ext_resource path="res://src/Actor/Enemy/WarriorSkeleton/WarriorSkeleton.gd" type="Script" id=30]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 4 ) ],
"loop": true,
"name": "Walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 17 ) ],
"loop": true,
"name": "Attack",
"speed": 7.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 29 ), ExtResource( 25 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 27 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 26 ) ],
"loop": true,
"name": "Dead",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128.288, 208.925 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 72.7848
height = 237.373

[node name="WarriorSkeleton" type="KinematicBody2D"]
scale = Vector2( 0.3, 0.3 )
collision_layer = 2
collision_mask = 2147483660
script = ExtResource( 30 )

[node name="PlatformDetectRight" type="RayCast2D" parent="."]
position = Vector2( 141.938, 0.882899 )
scale = Vector2( 1, 5 )
enabled = true
collision_mask = 8

[node name="PlatformDetectLeft" type="RayCast2D" parent="."]
position = Vector2( -155.195, 0 )
scale = Vector2( 1, 5 )
enabled = true
collision_mask = 8

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8.81795 )
shape = SubResource( 2 )

[node name="TimerAnimation" type="Timer" parent="."]
one_shot = true

[node name="AreaAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAttack"]
modulate = Color( 0.396078, 0.231373, 0.756863, 1 )
position = Vector2( -103.826, 0 )
shape = SubResource( 3 )
[connection signal="body_entered" from="AreaAttack" to="." method="_on_AreaAttack_body_entered"]
